correct horizontal scrolling issue

--- a/app/styles/_comfort-syntax.scss
+++ b/app/styles/_comfort-syntax.scss
@@ -5,12 +5,12 @@
     border: 0;
     border-radius: 0.3rem;
 	padding: 1rem;
-	overflow: auto;
 	font-size: 1rem;
+	overflow: scroll;
 }
 
 .highlight code,.highlight pre {
-    color: #fff
+    color: #fff;
 }
 
 .highlight .hll {
